@startuml
' --- Cấu hình giao diện ---
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam class {
    BackgroundColor #F9F9F9
    BorderColor #333333
    ArrowColor #0277BD
}
skinparam packageStyle rectangle

' --- ENUMS ---
package "Kiểu dữ liệu Enum" <<Folder>> {
    enum user_status {
        PENDING
        ACTIVE
        LOCKED
    }
    enum property_status {
        DRAFT
        PENDING
        APPROVED
        REJECTED
        HIDDEN
        DELETED
    }
}

' --- NHÓM RBAC (PHÂN QUYỀN) ---
package "Phân quyền (RBAC)" {
    class roles {
        + id : smallserial [PK]
        --
        code : varchar(50)
        name : varchar(120)
    }

    class permissions {
        + id : bigserial [PK]
        --
        code : varchar(100)
        name : varchar(150)
    }

    class role_permissions {
        + role_id : smallint [PK, FK]
        + permission_id : bigint [PK, FK]
    }
}

' --- NHÓM AUTH & JWT ---
package "Xác thực & Token (Auth/JWT)" {
    class auth_sessions {
        + id : uuid [PK]
        --
        user_id : uuid [FK]
        device_id : varchar(120)
        user_agent : text
        ip : inet
        is_active : boolean
        created_at : timestamptz
        last_seen_at : timestamptz
        expires_at : timestamptz
    }

    class refresh_tokens {
        + id : uuid [PK]
        --
        session_id : uuid [FK]
        user_id : uuid [FK]
        token_hash : text
        jti : uuid
        issued_at : timestamptz
        expires_at : timestamptz
        revoked_at : timestamptz
        replaced_by_token_id : uuid [FK]
        revoke_reason : varchar(120)
    }

    class revoked_jtis {
        + jti : uuid [PK]
        --
        user_id : uuid [FK]
        token_type : varchar(20)
        expires_at : timestamptz
        revoked_at : timestamptz
    }
}

' --- NHÓM CORE (NGHIỆP VỤ CHÍNH) ---
package "Nghiệp vụ Bất động sản (Core)" {
    class users {
        + id : uuid [PK]
        --
        full_name : varchar(120)
        email : varchar(255)
        phone : varchar(20)
        password_hash : text
        status : user_status
        last_login_at : timestamptz
        created_at : timestamptz
        updated_at : timestamptz
        deleted_at : timestamptz
    }

    class user_roles {
        + user_id : uuid [PK, FK]
        + role_id : smallint [PK, FK]
    }

    class areas {
        + id : bigserial [PK]
        --
        name : varchar(120)
        slug : varchar(150)
        is_active : boolean
        created_at : timestamptz
        updated_at : timestamptz
    }

    class room_types {
        + id : bigserial [PK]
        --
        name : varchar(80)
        is_active : boolean
        created_at : timestamptz
        updated_at : timestamptz
    }

    class properties {
        + id : uuid [PK]
        --
        host_id : uuid [FK]
        area_id : bigint [FK]
        room_type_id : bigint [FK]
        title : varchar(255)
        description : text
        address_line : varchar(255)
        monthly_price : numeric(14,2)
        area_m2 : numeric(8,2)
        bedrooms : smallint
        allow_pets : boolean
        status : property_status
        approved_by : uuid [FK]
        approved_at : timestamptz
        rejected_reason : text
        created_at : timestamptz
        updated_at : timestamptz
        deleted_at : timestamptz
    }

    class property_images {
        + id : uuid [PK]
        --
        property_id : uuid [FK]
        image_url : text
        is_thumbnail : boolean
        sort_order : int
        created_at : timestamptz
    }
}

' ==========================================
' MỐI QUAN HỆ (RELATIONSHIPS & FOREIGN KEYS)
' ==========================================

' 1. Quan hệ Core Bất động sản
users "1" -- "0..*" properties : "Đăng tin (host_id) >"
users "1" -- "0..*" properties : "Duyệt tin (approved_by) >"
areas "1" -- "0..*" properties : "Có (area_id) >"
room_types "1" -- "0..*" properties : "Có (room_type_id) >"

' Composition (*--): Xóa property thì xóa luôn images (ON DELETE CASCADE)
properties "1" *-- "0..*" property_images : "Bao gồm >"

' 2. Quan hệ Auth & JWT (Tất cả đều CASCADE)
users "1" *-- "0..*" auth_sessions : "Có >"
users "1" *-- "0..*" refresh_tokens : "Sở hữu >"
users "1" *-- "0..*" revoked_jtis : "Có >"
auth_sessions "1" *-- "0..*" refresh_tokens : "Chứa >"

' 3. Quan hệ RBAC (Bảng trung gian Many-to-Many)
users "1" -- "0..*" user_roles
roles "1" -- "0..*" user_roles

roles "1" -- "0..*" role_permissions
permissions "1" -- "0..*" role_permissions

@enduml